# SpotifySpy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  constants.py  env.dist  lambda_function.py  main.py  pyproject.toml  setup.cfg  utils.py
storage/: __init__.py  filesystem.py  s3.py
