[tool.poetry]
name = "spotify-playlist-telegram"
version = "0.1.0"
description = "Send a message on Telegram when a new track is added to a Spotify playlist"
authors = ["AhmedlRefaey <ahmed@refaey.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.117"
python-telegram-bot = "^21.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
nest-asyncio = "^1.6.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
target-version = ['py310']

[tool.isort]
profile = "black"
