[tool.poetry]
name = "SpotifySpy"
version = "1.0"
description = "Send a message on Telegram when a new track is added to a Spotify playlist"
authors = ["AhmedlRefaey <ahmed@refaey.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.117"
python-telegram-bot = "^21.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
nest-asyncio = "^1.6.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"
isort = "^5.13.2"
black = "^24.4.2"
pycln = "^2.4.0"
flake8 = "^7.0.0"
pre-commit = "^3.7.1"


[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 140
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = 'True'
force_grid_wrap = 0
use_parentheses = 'False'
ensure_newline_before_comments = 'True'
line_length = 140
combine_as_imports = 'False'
lines_after_imports = 2

[project]
authors = [
    {name = "AhmedlRefaey", email = "ahmed@refaey.me"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "boto3<2.0.0,>=1.34.117",
    "python-telegram-bot<22.0,>=21.2",
    "requests<3.0.0,>=2.32.3",
    "python-dotenv>=1.0.1,<2.0.0",
    "nest-asyncio<2.0.0,>=1.6.0",
]
name = "SpotifySpy"
version = "1.0"
description = "Send a message on Telegram when a new track is added to a Spotify playlist"
readme = "README.md"

[dependency-groups]
dev = [
    "ipython<9.0.0,>=8.25.0",
    "isort>=5.13.2,<6.0.0",
    "black>=24.4.2,<25.0.0",
    "pycln<3.0.0,>=2.4.0",
    "flake8>=7.0.0,<8.0.0",
    "pre-commit<4.0.0,>=3.7.1",
    "mypy>=1.15.0",
]
